--- a/frontend/styles/Index.module.css
+++ b/frontend/styles/Index.module.css
@@ -108,8 +108,8 @@
 .signupBox {
   width: 400px;
   /* width: 100%; */
-  display: flex;
-  flex-direction: row;
+  /* display: flex; */
+  /* flex-direction: row; */
   /* height: 400px; */
   border-radius: 15px;
   padding: 1.5em;
@@ -120,15 +120,36 @@
 
 .form {
   display: flex;
+  position: relative;
+  /* width: 100%; */
+  height: 450px;
+  width: calc(400px - 3em);
+  /* border: 1px solid blue; */
+  overflow: hidden;
 }
 
 .box1 {
+  /* display: flex; */
+  /* flex-direction: column; */
+  position: absolute;
+  /* width: 50%; */
+  width: calc(400px - 3em);
   /* border: 1px solid black; */
 }
 
 .box1:nth-child(2) {
-  /* border: 1px solid black; */
-  /* display: none; */
+  position: absolute;
+  left: calc(100% + 3em);
+}
+
+.box1:nth-child(3) {
+  position: absolute;
+  left: calc(200% + 6em);
+}
+
+.leftArrow {
+  margin-right: 0.3em;
+  cursor: pointer;
 }
 
 .form h2 {
@@ -147,6 +168,15 @@
   border-radius: 10px;
   padding: 0 10px;
   font-size: 1.1em;
+}
+
+.form label {
+  display: flex;
+  align-items: center;
+  font-size: 1.1em;
+  color: #7a7a7a;
+  margin-right: 1em;
+  /* border: 1px solid black; */
 }
 
 .form input:focus,
