--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -76,6 +76,10 @@ header nav ul {
   display: flex;
 }
 
+header nav ul li:hover {
+  font-weight: 600;
+}
+
 header nav ul:nth-child(3) li {
   padding: 0 10px;
 }
@@ -93,7 +97,7 @@ footer {
 .multi-select-filter {
   border: none;
   outline: none;
-  width: 280px;
+  width: 20vw;
   margin-top: 10px;
   background-color: #ffffff;
   border-radius: 8px;
