--- a/client/styles/Index.module.css
+++ b/client/styles/Index.module.css
@@ -274,6 +274,22 @@
 
 /* ---------------------------- POSTS ------------------------- */
 
+.createPostButtonContainer{
+  width: 100%;
+}
+
+.createPostButtonContainer a{
+  background-color: #2d4168;
+  padding: 10px;
+  color: white;
+  margin-left: 30px;
+  border-radius: 8px;
+}
+
+.createPostButtonContainer a:hover{
+  background-color: #3a5282;
+}
+
 .postsContainer {
   display: flex;
   flex-direction: column;
@@ -438,15 +454,18 @@
 }
 
 .starredPostList {
+  display: flex;
+  flex-direction: column;
   margin-top: 10px;
 }
-.starredPostList p {
+.starredPostList a {
   font-size: 1.3rem;
   padding-top: 10px;
 }
 
-.starredPostList p:hover {
+.starredPostList a:hover {
   cursor: pointer;
+  font-weight:500;
 }
 
 /* ---------------------------- CREATE POST FORM ------------------- */
