elements visibility login validation

--- a/client/styles/Index.module.css
+++ b/client/styles/Index.module.css
@@ -451,10 +451,12 @@
 
 .starSidebarHeader {
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
-.starredPostList {
+
+.starredPostList{
   display: flex;
   flex-direction: column;
   margin-top: 10px;
